--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,7 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+    <script src="lib/rsvp/rsvp.min.js"></script>    
     <script src="lib/geofire/dist/geofire.min.js"></script>
     <!-- AngularFire -->
     <script src="https://cdn.firebase.com/libs/angularfire/1.1.2/angularfire.min.js"></script>
