--- a/www/index.html
+++ b/www/index.html
@@ -28,21 +28,13 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src='js/services.js'></script>
+    <script src="js/LoginService.js"></script>
+    <script src="js/LoginController.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/directives.js"></script>
   </head>
 
-  <body ng-app="starter" ng-controller="MapCtrl">
-    <ion-header-bar class="bar-stable">
-      <h1 class="title">Map</h1>
-    </ion-header-bar>
-
-    <ion-content scroll="false">
-      <map on-create="mapCreated(map)"></map>
-    </ion-content>
-
-    <ion-footer-bar class="bar-stable">
-      <a ng-click="centerOnMe()" class="button button-icon icon ion-navigate"></a>
-    </ion-footer-bar>
+  <body ng-app="maraudersmap">
+      <ion-nav-view></ion-nav-view>
   </body>
 </html>
